--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.19.6",
+    "@types/styled-components": "^5.1.26",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.19",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
