--- a/package.json
+++ b/package.json
@@ -14,15 +14,22 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.7.3",
     "@types/babel__core": "^7.1.19",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.3.2",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
   }
 }
